# tunnelworm

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-portable-binaries.yml
scripts/: release.sh
src/: cli.rs  control.rs  error.rs  file_transfer.rs  forward.rs  lib.rs  local_control.rs  mux.rs  persistent.rs  persistent_auth.rs  pipe.rs  self_update.rs  session.rs  shell.rs  spec.rs  status_line.rs
src/daemon/: mod.rs  protocol.rs  runtime.rs
tests/: cli_pipe_shell.rs  cli_smoke.rs  file_transfer_protocol.rs  pipe_mode.rs  shell_protocol.rs  temp_tunnel_cleanup.rs  tunnelwormd_protocol_smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
