[package]
name = "tunnelworm"
version = "0.0.6"
edition = "2024"

[workspace]
members = ["xtask"]
resolver = "2"

[lib]
name = "tunnelworm"
path = "src/lib.rs"

[[bin]]
name = "tunnelworm"
path = "src/bin/tunnelworm.rs"

[dependencies]
async-channel = "2.5"
async-std = { version = "1.13", features = ["attributes"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
ctrlc = "3.4"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
flate2 = "1"
fs2 = "0.4"
futures = "0.3"
hex = "0.4"
libc = "0.2"
magic-wormhole = { git = "https://github.com/magic-wormhole/magic-wormhole.rs", rev = "72149d844ceee1d6a0c65e107d5339441a44c4d9", default-features = false, features = ["forwarding", "tls"] }
portable-pty = "0.9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
self-replace = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
